--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,14 @@
+build_platform:
+  osx_arm64: osx_64
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
 github:
   branch_name: main
   tooling_branch_name: main
 conda_build:
   error_overlinking: true
 conda_forge_output_validation: true
+provider:
+  linux_aarch64: azure
+  linux_ppc64le: azure
+test: native_and_emulated
