--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,12 @@ source:
 build:
   skip: True  # [win]
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
 
 requirements:
   build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ stdlib('c') }}
     - cmake
