--- a/.ci_support/osx_64_python3.9.____cpython.yaml
+++ b/.ci_support/osx_64_python3.9.____cpython.yaml
@@ -5,7 +5,7 @@ MACOSX_SDK_VERSION:
 c_compiler:
 - clang
 c_compiler_version:
-- '17'
+- '19'
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
@@ -17,7 +17,7 @@ channel_targets:
 gsl:
 - '2.7'
 libblas:
-- 3.9 *netlib
+- 3.9.* *netlib
 macos_machine:
 - x86_64-apple-darwin13.4.0
 pin_run_as_build:
@@ -28,6 +28,3 @@ python:
 - 3.9.* *_cpython
 target_platform:
 - osx-64
-zip_keys:
-- - python
-  - channel_sources
