--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,9 +20,9 @@ build:
 requirements:
   build:
     - if: build_platform != target_platform
-      then: python
-    - if: build_platform != target_platform
-      then: cross-python_${{ target_platform }}
+      then:
+        - python
+        - cross-python_${{ target_platform }}
     - ${{ compiler('c') }}
     - ${{ stdlib('c') }}
     - cmake
@@ -41,6 +41,7 @@ tests:
   - python:
       imports:
         - PyChooch
+      pip_check: true
   - files:
       source:
         - test_pychooch.py
